TiePie Handyscope HS5/TiePieLib/+LibTiePie/LibTiePieHeaders/libtiepieloader.h


extern LibTiePieObjIsRemoved_t ObjIsRemoved;

extern LibTiePieObjGetInterfaces_t ObjGetInterfaces;

extern LibTiePieObjSetEventCallback_t ObjSetEventCallback;

extern LibTiePieObjGetEvent_t ObjGetEvent;
extern LibTiePieObjSetEventEvent_t ObjSetEventEvent;
extern LibTiePieObjSetEventEvent_t ObjSetEventEvent;

extern LibTiePieObjSetEventWindowHandle_t ObjSetEventWindowHandle;
extern LibTiePieDevClose_t DevClose;

extern LibTiePieDevIsRemoved_t DevIsRemoved;

extern LibTiePieDevGetDriverVersion_t DevGetDriverVersion;

extern LibTiePieDevGetFirmwareVersion_t DevGetFirmwareVersion;

extern LibTiePieDevGetCalibrationDate_t DevGetCalibrationDate;

extern LibTiePieDevGetCalibrationToken_t DevGetCalibrationToken;

extern LibTiePieDevGetSerialNumber_t DevGetSerialNumber;

extern LibTiePieDevGetIPv4Address_t DevGetIPv4Address;

extern LibTiePieDevGetIPPort_t DevGetIPPort;

extern LibTiePieDevGetProductId_t DevGetProductId;

extern LibTiePieDevGetVendorId_t DevGetVendorId;

extern LibTiePieDevGetType_t DevGetType;

extern LibTiePieDevGetName_t DevGetName;

extern LibTiePieDevGetNameShort_t DevGetNameShort;

extern LibTiePieDevGetNameShortest_t DevGetNameShortest;

extern LibTiePieDevHasBattery_t DevHasBattery;

extern LibTiePieDevGetBatteryCharge_t DevGetBatteryCharge;

extern LibTiePieDevGetBatteryTimeToEmpty_t DevGetBatteryTimeToEmpty;

extern LibTiePieDevGetBatteryTimeToFull_t DevGetBatteryTimeToFull;

extern LibTiePieDevIsBatteryChargerConnected_t DevIsBatteryChargerConnected;

extern LibTiePieDevIsBatteryCharging_t DevIsBatteryCharging;

extern LibTiePieDevIsBatteryBroken_t DevIsBatteryBroken;

extern LibTiePieDevSetCallbackRemoved_t DevSetCallbackRemoved;
extern LibTiePieDevSetEventRemoved_t DevSetEventRemoved;
extern LibTiePieDevSetEventRemoved_t DevSetEventRemoved;

extern LibTiePieDevSetMessageRemoved_t DevSetMessageRemoved;
extern LibTiePieDevTrGetInputCount_t DevTrGetInputCount;

extern LibTiePieDevTrGetInputIndexById_t DevTrGetInputIndexById;

extern LibTiePieScpTrInIsTriggered_t ScpTrInIsTriggered;

extern LibTiePieDevTrInGetEnabled_t DevTrInGetEnabled;

extern LibTiePieDevTrInSetEnabled_t DevTrInSetEnabled;

extern LibTiePieDevTrInGetKinds_t DevTrInGetKinds;

extern LibTiePieScpTrInGetKindsEx_t ScpTrInGetKindsEx;

extern LibTiePieDevTrInGetKind_t DevTrInGetKind;

extern LibTiePieDevTrInSetKind_t DevTrInSetKind;

extern LibTiePieDevTrInIsAvailable_t DevTrInIsAvailable;

extern LibTiePieScpTrInIsAvailableEx_t ScpTrInIsAvailableEx;

extern LibTiePieDevTrInGetId_t DevTrInGetId;

extern LibTiePieDevTrInGetName_t DevTrInGetName;

extern LibTiePieDevTrGetOutputCount_t DevTrGetOutputCount;

extern LibTiePieDevTrGetOutputIndexById_t DevTrGetOutputIndexById;

extern LibTiePieDevTrOutGetEnabled_t DevTrOutGetEnabled;

extern LibTiePieDevTrOutSetEnabled_t DevTrOutSetEnabled;

extern LibTiePieDevTrOutGetEvents_t DevTrOutGetEvents;

extern LibTiePieDevTrOutGetEvent_t DevTrOutGetEvent;

extern LibTiePieDevTrOutSetEvent_t DevTrOutSetEvent;

extern LibTiePieDevTrOutGetId_t DevTrOutGetId;

extern LibTiePieDevTrOutGetName_t DevTrOutGetName;

extern LibTiePieDevTrOutTrigger_t DevTrOutTrigger;

extern LibTiePieScpGetChannelCount_t ScpGetChannelCount;

extern LibTiePieScpChIsAvailable_t ScpChIsAvailable;

extern LibTiePieScpChIsAvailableEx_t ScpChIsAvailableEx;

extern LibTiePieScpChGetConnectorType_t ScpChGetConnectorType;

extern LibTiePieScpChIsDifferential_t ScpChIsDifferential;

extern LibTiePieScpChGetImpedance_t ScpChGetImpedance;

extern LibTiePieScpChGetBandwidths_t ScpChGetBandwidths;

extern LibTiePieScpChGetBandwidth_t ScpChGetBandwidth;

extern LibTiePieScpChSetBandwidth_t ScpChSetBandwidth;