TiePie Handyscope HS5/TiePieLib/+LibTiePie/LibTiePieHeaders/LibTiePie.pas

function ObjIsRemoved( hHandle : TLibTiePieHandle ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ObjIsRemoved'{$endif};
function ObjGetInterfaces( hHandle : TLibTiePieHandle ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ObjGetInterfaces'{$endif};
procedure ObjSetEventCallback( hHandle : TLibTiePieHandle ; pCallback : TTpCallbackEvent ; pData : Pointer ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ObjSetEventCallback'{$endif};
function ObjGetEvent( hHandle : TLibTiePieHandle ; pEvent , pValue : PLongWord ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ObjGetEvent'{$endif};
{$ifdef LINUX}
procedure ObjSetEventEvent( hHandle : TLibTiePieHandle ; fdEvent : Integer ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ObjSetEventEvent'{$endif};
{$endif LINUX}
{$ifdef MSWINDOWS}
procedure ObjSetEventEvent( hHandle : TLibTiePieHandle ; hEvent : THandle ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ObjSetEventEvent'{$endif};
procedure ObjSetEventWindowHandle( hHandle : TLibTiePieHandle ; hWnd : HWND ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ObjSetEventWindowHandle'{$endif};
{$endif MSWINDOWS}
procedure DevClose( hDevice : TLibTiePieHandle ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevClose'{$endif};
function DevIsRemoved( hDevice : TLibTiePieHandle ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevIsRemoved'{$endif};
function DevGetDriverVersion( hDevice : TLibTiePieHandle ) : TTpVersion; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevGetDriverVersion'{$endif};
function DevGetFirmwareVersion( hDevice : TLibTiePieHandle ) : TTpVersion; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevGetFirmwareVersion'{$endif};
function DevGetCalibrationDate( hDevice : TLibTiePieHandle ) : TTpDate; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevGetCalibrationDate'{$endif};
function DevGetCalibrationToken( hDevice : TLibTiePieHandle ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevGetCalibrationToken'{$endif};
function DevGetSerialNumber( hDevice : TLibTiePieHandle ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevGetSerialNumber'{$endif};
function DevGetIPv4Address( hDevice : TLibTiePieHandle ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevGetIPv4Address'{$endif};
function DevGetIPPort( hDevice : TLibTiePieHandle ) : Word; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevGetIPPort'{$endif};
function DevGetProductId( hDevice : TLibTiePieHandle ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevGetProductId'{$endif};
function DevGetVendorId( hDevice : TLibTiePieHandle ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevGetVendorId'{$endif};
function DevGetType( hDevice : TLibTiePieHandle ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevGetType'{$endif};
function DevGetName( hDevice : TLibTiePieHandle ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevGetName'{$endif};
function DevGetNameShort( hDevice : TLibTiePieHandle ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevGetNameShort'{$endif};
function DevGetNameShortest( hDevice : TLibTiePieHandle ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevGetNameShortest'{$endif};
function DevHasBattery( hDevice : TLibTiePieHandle ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevHasBattery'{$endif};
function DevGetBatteryCharge( hDevice : TLibTiePieHandle ) : ShortInt; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevGetBatteryCharge'{$endif};
function DevGetBatteryTimeToEmpty( hDevice : TLibTiePieHandle ) : LongInt; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevGetBatteryTimeToEmpty'{$endif};
function DevGetBatteryTimeToFull( hDevice : TLibTiePieHandle ) : LongInt; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevGetBatteryTimeToFull'{$endif};
function DevIsBatteryChargerConnected( hDevice : TLibTiePieHandle ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevIsBatteryChargerConnected'{$endif};
function DevIsBatteryCharging( hDevice : TLibTiePieHandle ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevIsBatteryCharging'{$endif};
function DevIsBatteryBroken( hDevice : TLibTiePieHandle ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevIsBatteryBroken'{$endif};
procedure DevSetCallbackRemoved( hDevice : TLibTiePieHandle ; pCallback : TTpCallback ; pData : Pointer ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevSetCallbackRemoved'{$endif};
{$ifdef LINUX}
procedure DevSetEventRemoved( hDevice : TLibTiePieHandle ; fdEvent : Integer ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevSetEventRemoved'{$endif};
{$endif LINUX}
{$ifdef MSWINDOWS}
procedure DevSetEventRemoved( hDevice : TLibTiePieHandle ; hEvent : THandle ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevSetEventRemoved'{$endif};
procedure DevSetMessageRemoved( hDevice : TLibTiePieHandle ; hWnd : HWND ; wParam : WPARAM ; lParam : LPARAM ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevSetMessageRemoved'{$endif};
{$endif MSWINDOWS}
function DevTrGetInputCount( hDevice : TLibTiePieHandle ) : Word; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevTrGetInputCount'{$endif};
function DevTrGetInputIndexById( hDevice : TLibTiePieHandle ; dwId : LongWord ) : Word; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevTrGetInputIndexById'{$endif};
function ScpTrInIsTriggered( hDevice : TLibTiePieHandle ; wInput : Word ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpTrInIsTriggered'{$endif};
function DevTrInGetEnabled( hDevice : TLibTiePieHandle ; wInput : Word ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevTrInGetEnabled'{$endif};
function DevTrInSetEnabled( hDevice : TLibTiePieHandle ; wInput : Word ; bEnable : ByteBool ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevTrInSetEnabled'{$endif};
function DevTrInGetKinds( hDevice : TLibTiePieHandle ; wInput : Word ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevTrInGetKinds'{$endif};
function ScpTrInGetKindsEx( hDevice : TLibTiePieHandle ; wInput : Word ; dwMeasureMode : LongWord ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpTrInGetKindsEx'{$endif};
function DevTrInGetKind( hDevice : TLibTiePieHandle ; wInput : Word ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevTrInGetKind'{$endif};
function DevTrInSetKind( hDevice : TLibTiePieHandle ; wInput : Word ; qwKind : UInt64 ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevTrInSetKind'{$endif};
function DevTrInIsAvailable( hDevice : TLibTiePieHandle ; wInput : Word ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevTrInIsAvailable'{$endif};
function ScpTrInIsAvailableEx( hDevice : TLibTiePieHandle ; wInput : Word ; dwMeasureMode : LongWord ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpTrInIsAvailableEx'{$endif};
function DevTrInGetId( hDevice : TLibTiePieHandle ; wInput : Word ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevTrInGetId'{$endif};
function DevTrInGetName( hDevice : TLibTiePieHandle ; wInput : Word ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevTrInGetName'{$endif};
function DevTrGetOutputCount( hDevice : TLibTiePieHandle ) : Word; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevTrGetOutputCount'{$endif};
function DevTrGetOutputIndexById( hDevice : TLibTiePieHandle ; dwId : LongWord ) : Word; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevTrGetOutputIndexById'{$endif};
function DevTrOutGetEnabled( hDevice : TLibTiePieHandle ; wOutput : Word ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevTrOutGetEnabled'{$endif};
function DevTrOutSetEnabled( hDevice : TLibTiePieHandle ; wOutput : Word ; bEnable : ByteBool ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevTrOutSetEnabled'{$endif};
function DevTrOutGetEvents( hDevice : TLibTiePieHandle ; wOutput : Word ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevTrOutGetEvents'{$endif};
function DevTrOutGetEvent( hDevice : TLibTiePieHandle ; wOutput : Word ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevTrOutGetEvent'{$endif};
function DevTrOutSetEvent( hDevice : TLibTiePieHandle ; wOutput : Word ; qwEvent : UInt64 ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevTrOutSetEvent'{$endif};
function DevTrOutGetId( hDevice : TLibTiePieHandle ; wOutput : Word ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevTrOutGetId'{$endif};
function DevTrOutGetName( hDevice : TLibTiePieHandle ; wOutput : Word ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevTrOutGetName'{$endif};
function DevTrOutTrigger( hDevice : TLibTiePieHandle ; wOutput : Word ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_DevTrOutTrigger'{$endif};
function ScpGetChannelCount( hDevice : TLibTiePieHandle ) : Word; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpGetChannelCount'{$endif};
function ScpChIsAvailable( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChIsAvailable'{$endif};
function ScpChIsAvailableEx( hDevice : TLibTiePieHandle ; wCh : Word ; dwMeasureMode : LongWord ; dSampleFrequency : Double ; byResolution : Byte ; pChannelEnabled : PByteBool ; wChannelCount : Word ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChIsAvailableEx'{$endif};
function ScpChGetConnectorType( hDevice : TLibTiePieHandle ; wCh : Word ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChGetConnectorType'{$endif};
function ScpChIsDifferential( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChIsDifferential'{$endif};
function ScpChGetImpedance( hDevice : TLibTiePieHandle ; wCh : Word ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChGetImpedance'{$endif};
function ScpChGetBandwidths( hDevice : TLibTiePieHandle ; wCh : Word ; pList : PDouble ; dwLength : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChGetBandwidths'{$endif};
function ScpChGetBandwidth( hDevice : TLibTiePieHandle ; wCh : Word ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChGetBandwidth'{$endif};
function ScpChSetBandwidth( hDevice : TLibTiePieHandle ; wCh : Word ; dBandwidth : Double ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChSetBandwidth'{$endif};
